fix the weird cutoff issue

--- a/assets/css/raffle-meter.css
+++ b/assets/css/raffle-meter.css
@@ -60,6 +60,6 @@
 /* end half-style hs-vertical-third */
 
 #progress {
-    height: 100px;
     margin: 5% 0%;
+    line-height: initial;
 }
